openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsecops-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devsecops-demo
  template:
    metadata:
      labels:
        app: devsecops-demo
    spec:
      serviceAccountName: devsecops-demo
      containers:
        - name: application
          image: devsecops-demo:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
