openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsecops-demo
spec:
  selector:
    app: devsecops-demo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
