openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: devsecops-demo
spec:
  to:
    kind: Service
    name: devsecops-demo
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
